Add include directive for well-known directory

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Sureshj419's homepage
 description: Bookmark this to keep an eye on my project updates!
+
+include: [".well-known"]
